--- a/typescript/package.json
+++ b/typescript/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "p9": "tsx 9.ts"
+    "p9": "tsx 9.ts",
+    "p13": "tsx 13.ts"
   },
   "keywords": [],
   "author": "",
